<resources>
    <string name="app_name">PianoForKids</string>
    <string name="login">LOG IN</string>
    <string name="show_logo">show logo</string>
    <string name="register_here">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="show_another_login">show another login</string>
    <string name="login_with_twitter">login with twitter</string>
    <string name="login_title">Login</string>
    <string name="fb_auth">signIn with fb account</string>
    <string name="app_title">LET\'S PLAY MUSIC</string>
    <string name="fix">song_content</string>
    <string name="fix1">TODO</string>
    <string name="fix2">TODO</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="sound_settings">Sound Settings</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="scale_title">Scale For Keys</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="sound_on_off">Turn Sound On/Off</string>
    <string name="background_music_on_off">Turn Background Music On/Off</string>

    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_header">Settings</string>
    <string name="describe_button">make go back possible</string>
    <string name="sound">Sound</string>
    <string name="background_music">Background Music</string>
    <string name="language">Language</string>
</resources>
