<?xml version="1.0" encoding="utf-8"?>

<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingTop="10dp"
    tools:context=".View.MainMenuActivity">>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="146dp"
        android:layout_height="140dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="248dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="@color/colorAccent"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/animation_star"
        app:lottie_speed="0.65" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="782dp"
        android:layout_height="381dp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_rawRes="@raw/animation_music_green"
        app:lottie_autoPlay="true"
        app:lottie_colorFilter="@color/colorAccent"
        app:lottie_loop="true"
        />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="750dp"
        android:layout_height="175dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/title_texture"
        android:fontFamily="@font/covered_by_your_grace"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/color_yellow_highlight"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="763dp"
        android:layout_height="130dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <at.markushi.ui.CircleButton

                android:id="@+id/button_settings"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:onClick="button_settings_onCLick"
                android:src="@drawable/ic_settings_36dp"
                app:cb_color="#B0B562DF"
                app:cb_pressedRingWidth="4dip" />

            <at.markushi.ui.CircleButton
                android:id="@+id/button_user"
                android:layout_width="88dp"
                android:layout_height="60dp"
                android:onClick="playSound"
                android:src="@drawable/ic_user"
                app:cb_color="#F3B45A"
                app:cb_pressedRingWidth="4dip" />
        </LinearLayout>

        <com.skyfishjy.library.RippleBackground
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/song_content"
            app:rb_radius="20dp"
            app:rb_color="@color/color_pinkForIns"
            app:rb_rippleAmount="4"
            app:rb_duration="1500"
            app:rb_scale="6">
            <ImageButton
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="40dp"
                android:id="@+id/button_songs"
                android:layout_width="160dp"
                android:layout_height="104dp"
                android:background="@drawable/custom_button"
                android:onClick="playSound"
                android:src="@drawable/ic_songs_book_64"
                android:contentDescription="@string/fix" />
        </com.skyfishjy.library.RippleBackground>

        <com.skyfishjy.library.RippleBackground
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/instrument_content"
            app:rb_radius="20dp"
            app:rb_color="@color/color_pinkForIns"
            app:rb_rippleAmount="4"
            app:rb_duration="1500"
            app:rb_scale="6">
            <ImageButton
                android:layout_centerHorizontal="true"
                android:layout_marginStart="60dp"
                android:id="@+id/button_instruments"
                android:layout_width="181dp"
                android:layout_height="104dp"
                android:background="@drawable/custom_button"
                android:onClick="playSound"
                android:src="@drawable/ic_instruments_128"
                android:contentDescription="@string/fix2" />
        </com.skyfishjy.library.RippleBackground>


        <com.skyfishjy.library.RippleBackground
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/instructions_content"
            app:rb_radius="20dp"
            app:rb_color="@color/color_pinkForIns"
            app:rb_rippleAmount="4"
            app:rb_duration="1500"
            app:rb_scale="6">
            <ImageButton
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="60dp"
                android:id="@+id/button_instructions"
                android:layout_width="160dp"
                android:layout_height="104dp"
                android:background="@drawable/custom_button"
                android:onClick="playSound"
                android:src="@drawable/ic_instructions_64"
                android:contentDescription="@string/fix1" />
        </com.skyfishjy.library.RippleBackground>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

